REGRESSION: Web Inspector: Start Timeline Recording in Develop menu broken https://bugs.webkit.org/show_bug.cgi?id=144150

Reviewed by Brian Burg.

Source/WebInspectorUI:

* UserInterface/Protocol/InspectorFrontendAPI.js:
(InspectorFrontendAPI.setTimelineProfilingEnabled): Change !== to === when
checking enabled to isCapturing().

Source/WebKit2:

* WebProcess/WebPage/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::evaluateCommandOnLoad): Properly treat bools as literals
instead of strings by not using the string version of evaluateCommandOnLoad.


Canonical link: https://commits.webkit.org/162135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183268 268f45cc-cd09-0410-ab3c-d52691b4dbfc